# slategray-blender-tools

./: .gitignore  ApplyModifiers.py  LICENSE  README.md  pyproject.toml
apply_modifiers_addon/: __init__.py  operators.py  ui.py  utils.py
slategray_blender_tools/: __init__.py  props.py  ui.py  utils.py
slategray_blender_tools/modules/: apply_modifiers.py  apply_rest_pose.py  clean_vertex_groups.py  merge_vertex_groups.py  purge_unused_data.py  transfer_shape_keys.py
slategray_blender_tools/utils/: __init__.py  lifecycle.py  mesh.py  performance.py  rigging.py  ui.py
